convert inventory to python

--- a/inventory/Dockerfile
+++ b/inventory/Dockerfile
@@ -1,9 +1,46 @@
-FROM maven:3.8.5-openjdk-11 AS build
-COPY src /home/app/src
-COPY pom.xml /home/app
-RUN mvn -f /home/app/pom.xml clean package
+# Stage 1: Build Stage
+FROM python:3.11 as builder
 
-FROM eclipse-temurin:11-jre-jammy
-COPY --from=build /home/app/target/*.jar /app/inventory.jar
-USER 15000
-CMD ["java","-jar", "/app/inventory.jar"]
+# Set environment variables for Python and prevent writing .pyc files
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+# Install system dependencies
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        gcc \
+        libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Create and set the working directory
+WORKDIR /app
+
+# Copy only the poetry files to the working directory
+COPY poetry.lock pyproject.toml inventory/ /app/
+
+# Install Poetry
+RUN pip install poetry
+
+# Install project dependencies
+RUN poetry config virtualenvs.create false \
+    && poetry install --no-dev
+
+# Stage 2: Runtime Stage
+FROM python:3.11-slim
+
+# Set environment variables for Python and prevent writing .pyc files
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+# Create and set the working directory
+WORKDIR /app
+
+# Copy only the necessary files from the builder stage
+COPY --from=builder /usr/local/lib/python3.11/site-packages/ /usr/local/lib/python3.11/site-packages/
+COPY --from=builder /app /app
+
+# Expose the port that the application will run on
+EXPOSE 8080
+
+# Command to run the application
+CMD ["python", "main.py"]
