--- a/pricing/Dockerfile
+++ b/pricing/Dockerfile
@@ -1,12 +1,13 @@
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
+ARG TARGETARCH
 WORKDIR /App
 
 # Copy everything
 COPY . ./
 # Restore as distinct layers
-RUN dotnet restore
+RUN dotnet restore -a $TARGETARCH
 # Build and publish a release
-RUN dotnet publish -c Release -o out
+RUN dotnet publish -a $TARGETARCH --no-restore -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
