change jaeger port

--- a/kubernetes/jaeger.yaml
+++ b/kubernetes/jaeger.yaml
@@ -33,9 +33,9 @@ metadata:
   namespace: tracing
 spec:
   ports:
-  - name: http
-    port: 4318
-    targetPort: 4318
+  - name: otlp
+    port: 4317
+    targetPort: 4317
   - name: ui
     port: 16686
     targetPort: 16686
