--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,17 @@ jobs:
           echo "short_commit=${SHORT_COMMIT}" >> $GITHUB_ENV
           echo "date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_OUTPUT
 
+      - name: Install GemFury CLI
+        run: |
+          sudo bash -c "echo 'deb [trusted=yes] https://apt.fury.io/cli/ * *' > /etc/apt/sources.list.d/fury-cli.list"
+          sudo apt-get update
+          sudo apt-get install -y fury-cli
+  
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"  
+
       - name: Release Membership Linux Package
         uses: goreleaser/goreleaser-action@v5
         with:
