--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,4 +51,5 @@ jobs:
         env:
             FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
             FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
