ci: disable github release when publishing linux packages

--- a/membership/.goreleaser.yaml
+++ b/membership/.goreleaser.yaml
@@ -48,3 +48,7 @@ checksum:
   name_template: 'checksums.txt'
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
+
+release:
+  github:
+    enabled: false
