--- a/membership/distribution/membership/membership.service
+++ b/membership/distribution/membership/membership.service
@@ -3,12 +3,13 @@ Description=Odigos Demo Membership Service
 After=network.target
 
 [Service]
-ExecStart=/usr/bin/odigos-membership-service
+ExecStart=/usr/bin/odigos-membership
 KillMode=mixed
 Restart=on-failure
 Type=simple
-User=root
-Group=root
+User=odigos
+Group=odigos
+Environment="PORT=8081"
 
 [Install]
 WantedBy=multi-user.target
