fix: compile go with symbols

--- a/membership/.goreleaser.yaml
+++ b/membership/.goreleaser.yaml
@@ -10,6 +10,7 @@ builds:
       - amd64
       - arm64
     binary: odigos-membership
+    ldflags: "" # Ensure no stripping of symbols
 nfpms:
   - id: packages # this id is used in the publisher section to specify which artifacts to publish
     package_name: membership
