--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,9 @@ on:
   push:
     tags:
       - "v*"
+  pull_request:
+    branches:
+      - main
 
 permissions:
   contents: read
@@ -44,17 +47,17 @@ jobs:
         with:
           go-version: "1.22"
 
-      - name: Release Membership Linux Package
-        uses: goreleaser/goreleaser-action@v5
-        with:
-            distribution: goreleaser
-            version: latest
-            args: release --clean
-            workdir: membership
-        env:
-            FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
-            FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: Release Membership Linux Package
+      #   uses: goreleaser/goreleaser-action@v5
+      #   with:
+      #       distribution: goreleaser
+      #       version: latest
+      #       args: release --clean
+      #       workdir: membership
+      #   env:
+      #       FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
+      #       FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
+      #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ######################
   ####   FRONTEND   ####
   ######################
