--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,8 @@ jobs:
 
       - name: set new version as env
         run: |
-          echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo "TAG=main" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
@@ -68,7 +69,8 @@ jobs:
 
       - name: set new version as env
         run: |
-          echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo "TAG=main" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
