--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,15 @@
+FROM node:20-alpine as fe-build
+USER node
+WORKDIR /home/node
+COPY webapp/package* /home/node/
+RUN yarn
+
+COPY webapp/* /home/node/
+RUN yarn build
+
 FROM maven:3.8.5-openjdk-17 AS build
 COPY src /home/app/src
+COPY --from=fe-build /home/node/out/* /home/app/src/main/resources/static/
 COPY pom.xml /home/app
 RUN mvn -f /home/app/pom.xml clean package
 
