--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,12 +99,16 @@ jobs:
         run: go install github.com/goreleaser/nfpm/v2/cmd/nfpm@latest
 
       - name: Release
+        working-directory: frontend
         env:
           FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
           FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           nfpm --help || true
-          cd frontend
           docker build -t frontend .
           docker cp $(docker create --name tc frontend):/app ./dist && docker rm tc
+          nfpm pkg --packager rpm --target dist/
+          nfpm pkg --packager deb --target dist/
+          fury push dist/*.rpm
+          fury push dist/*.deb
