fix: pass creds to fury push

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -113,5 +113,5 @@ jobs:
           cat nfpm.yaml
           nfpm pkg --packager rpm --target dist/
           nfpm pkg --packager deb --target dist/
-          fury push dist/*.rpm
-          fury push dist/*.deb
+          fury push --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
+          fury push --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
