--- a/pricing/Dockerfile
+++ b/pricing/Dockerfile
@@ -1,6 +1,6 @@
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 ARG TARGETARCH
-WORKDIR /App
+WORKDIR /app
 
 # Copy everything
 COPY . ./
@@ -11,6 +11,6 @@ RUN dotnet publish -a $TARGETARCH --no-restore -c Release -o out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
-WORKDIR /App
-COPY --from=build-env /App/out .
+WORKDIR /app
+COPY --from=build-env /app/out .
 ENTRYPOINT ["dotnet", "pricing.dll"]
