--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -225,3 +225,59 @@ jobs:
           nfpm pkg --packager deb --target dist/
           fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
           fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
+  ######################
+  ####    PRICING   ####
+  ######################
+  release-pricing:
+    runs-on:
+      labels: ubuntu-latest
+    steps:
+
+      - name: set new version as env
+        run: |
+          # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+          echo "TAG=main" >> $GITHUB_ENV
+
+      - uses: actions/checkout@v4
+        # with:
+          # fetch-depth: 0
+          # ref: ${{ env.TAG }}
+
+      - name: Set env
+        id: vars
+        run: |
+          SHORT_COMMIT=$(git rev-parse --short HEAD)
+          echo "short_commit=${SHORT_COMMIT}" >> $GITHUB_ENV
+          echo "date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_OUTPUT
+
+      - name: Install GemFury CLI
+        run: |
+          sudo bash -c "echo 'deb [trusted=yes] https://apt.fury.io/cli/ * *' > /etc/apt/sources.list.d/fury-cli.list"
+          sudo apt-get update
+          sudo apt-get install -y fury-cli
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.22"
+
+      - name: Install nfpm
+        run: go install github.com/goreleaser/nfpm/v2/cmd/nfpm@latest
+
+      - name: Release
+        working-directory: pricing
+        env:
+          FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
+          FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          docker build -t pricing .
+          docker create --name tc pricing
+          mkdir -p ./dist/app
+          docker cp tc:/app ./dist/app
+          docker rm tc
+          nfpm pkg --packager rpm --target dist/
+          nfpm pkg --packager deb --target dist/
+          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
+          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
+
