--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,12 @@ jobs:
       - name: set new version as env
         run: |
           # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "TAG=main" >> $GITHUB_ENV
+          echo "TAG=v1.0.0" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-          ref: ${{ env.TAG }}
+        # with:
+        #   fetch-depth: 0
+        #   ref: ${{ env.TAG }}
 
       - name: Set env
         id: vars
@@ -48,17 +48,17 @@ jobs:
         with:
           go-version: "1.22"
 
-      # - name: Release Membership Linux Package
-      #   uses: goreleaser/goreleaser-action@v5
-      #   with:
-      #       distribution: goreleaser
-      #       version: latest
-      #       args: release --clean
-      #       workdir: membership
-      #   env:
-      #       FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
-      #       FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
-      #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Release Membership Linux Package
+        uses: goreleaser/goreleaser-action@v5
+        with:
+            distribution: goreleaser
+            version: latest
+            args: release --clean
+            workdir: membership
+        env:
+            FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
+            FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   ######################
   ####   FRONTEND   ####
   ######################
