chore: use dotnet binary to run pricing - better chance cross-environment support

--- a/pricing/distribution/systemd.service
+++ b/pricing/distribution/systemd.service
@@ -3,8 +3,8 @@ Description=Odigos Demo Pricing Service
 After=network.target
 
 [Service]
-#ExecStart=dotnet /opt/odigos-demo-pricing/pricing.dll
-ExecStart=/opt/odigos-demo-pricing/pricing
+#ExecStart=/opt/odigos-demo-pricing/pricing
+ExecStart=dotnet /opt/odigos-demo-pricing/pricing.dll
 KillMode=mixed
 Restart=on-failure
 Type=simple
