fix: gorelease non-snapshot versions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,7 @@ jobs:
         with:
             distribution: goreleaser
             version: latest
-            args: release --clean --snapshot
+            args: release --clean
             workdir: membership
         env:
             FURY_ACCOUNT: ${{ secrets.FURY_ACCOUNT }}
