--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,9 +4,6 @@ on:
   push:
     tags:
       - "v*"
-  pull_request:
-    branches:
-      - main
 
 permissions:
   contents: read
@@ -20,22 +17,19 @@ jobs:
       labels: ubuntu-latest
     steps:
 
-      - name: set new version as env
-        run: |
-          # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "TAG=v1.0.0" >> $GITHUB_ENV
+      - name: Store new version in env
+        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
-        # with:
-        #   fetch-depth: 0
-        #   ref: ${{ env.TAG }}
+        with:
+          fetch-depth: 0
+          ref: ${{ env.TAG }}
 
       - name: Set env
         id: vars
         run: |
           SHORT_COMMIT=$(git rev-parse --short HEAD)
           echo "short_commit=${SHORT_COMMIT}" >> $GITHUB_ENV
-          echo "date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_OUTPUT
 
       - name: Install GemFury CLI
         run: |
@@ -67,22 +61,13 @@ jobs:
       labels: ubuntu-latest
     steps:
 
-      - name: set new version as env
-        run: |
-          # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "TAG=1.0.1" >> $GITHUB_ENV
+      - name: Store new version in env
+        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
-        # with:
-          # fetch-depth: 0
-          # ref: ${{ env.TAG }}
-
-      - name: Set env
-        id: vars
-        run: |
-          SHORT_COMMIT=$(git rev-parse --short HEAD)
-          echo "short_commit=${SHORT_COMMIT}" >> $GITHUB_ENV
-          echo "date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_OUTPUT
+        with:
+          fetch-depth: 0
+          ref: ${{ env.TAG }}
 
       - name: Install GemFury CLI
         run: |
@@ -120,22 +105,13 @@ jobs:
       labels: ubuntu-latest
     steps:
 
-      - name: set new version as env
-        run: |
-          # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "TAG=1.0.1" >> $GITHUB_ENV
+      - name: Store new version in env
+        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
-        # with:
-          # fetch-depth: 0
-          # ref: ${{ env.TAG }}
-
-      - name: Set env
-        id: vars
-        run: |
-          SHORT_COMMIT=$(git rev-parse --short HEAD)
-          echo "short_commit=${SHORT_COMMIT}" >> $GITHUB_ENV
-          echo "date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_OUTPUT
+        with:
+          fetch-depth: 0
+          ref: ${{ env.TAG }}
 
       - name: Install GemFury CLI
         run: |
@@ -177,22 +153,13 @@ jobs:
       labels: ubuntu-latest
     steps:
 
-      - name: set new version as env
-        run: |
-          # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "TAG=1.0.1" >> $GITHUB_ENV
+      - name: Store new version in env
+        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
-        # with:
-          # fetch-depth: 0
-          # ref: ${{ env.TAG }}
-
-      - name: Set env
-        id: vars
-        run: |
-          SHORT_COMMIT=$(git rev-parse --short HEAD)
-          echo "short_commit=${SHORT_COMMIT}" >> $GITHUB_ENV
-          echo "date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_OUTPUT
+        with:
+          fetch-depth: 0
+          ref: ${{ env.TAG }}
 
       - name: Install GemFury CLI
         run: |
@@ -233,22 +200,13 @@ jobs:
       labels: ubuntu-latest
     steps:
 
-      - name: set new version as env
-        run: |
-          # echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-          echo "TAG=1.0.1" >> $GITHUB_ENV
+      - name: Store new version in env
+        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
-        # with:
-          # fetch-depth: 0
-          # ref: ${{ env.TAG }}
-
-      - name: Set env
-        id: vars
-        run: |
-          SHORT_COMMIT=$(git rev-parse --short HEAD)
-          echo "short_commit=${SHORT_COMMIT}" >> $GITHUB_ENV
-          echo "date=$(date -u +"%Y-%m-%dT%H:%M:%SZ")" >> $GITHUB_OUTPUT
+        with:
+          fetch-depth: 0
+          ref: ${{ env.TAG }}
 
       - name: Install GemFury CLI
         run: |
