chore: release all demo services in CI (#13)
* chore: build frontend in CI

* tmp: turn on CI on PRs

* fix: install nfpm

* tmp: overwrite tag

* feat: move webapp under frontend and build it in the frontend docker build

* ci: push to fury

* feat: debug

* tmp: use current commit as the base

* fix: reference webapp without slash

* fix: pass creds to fury push

* fix: make the pacakge public

* chore: bump version

* chore: yank for debugging

* tmp: change package name to be able to publish public package

* wip: add inventory and coupon release jobs

* feat: build package for pricing service

* refactor: structure membership service the same way as the others

* ci: remove "release-" prefix from job IDs, since they're nested already

* chore: re-enable membership releases

* chore: use dotnet binary to run pricing - better chance cross-environment support

* tmp: use snapshot release for membership for now

* fix: fix file references

* fix: gorelease non-snapshot versions

* chore: substitute version before releasing

* chore: clean up CI workflow

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,19 @@
+FROM node:20-alpine as fe-build
+USER node
+WORKDIR /home/node
+COPY webapp/package* webapp/yarn.lock /home/node/
+RUN ls -lah . && yarn
+
+COPY webapp /home/node/
+RUN ls -lah . && yarn build
+
 FROM maven:3.8.5-openjdk-17 AS build
 COPY src /home/app/src
+COPY --from=fe-build /home/node/out/* /home/app/src/main/resources/static/
 COPY pom.xml /home/app
 RUN mvn -f /home/app/pom.xml clean package
 
 FROM eclipse-temurin:17-jre-jammy
 COPY --from=build /home/app/target/*.jar /app/frontend.jar
 USER 15000
-CMD ["java","-jar", "/app/frontend.jar"]
+CMD ["java", "-jar", "/app/frontend.jar"]
