feat: restart failing system services in an interval

--- a/frontend/distribution/systemd.service
+++ b/frontend/distribution/systemd.service
@@ -6,6 +6,9 @@ After=network.target
 ExecStart=java -jar /usr/share/java/odigos-demo-frontend.jar
 KillMode=mixed
 Restart=on-failure
+RestartSec=1s
+RestartSteps=1s
+RestartMaxDelaySec=1min
 Type=simple
 User=odigos
 Group=odigos
