--- a/inventory/distribution/systemd.service
+++ b/inventory/distribution/systemd.service
@@ -6,6 +6,9 @@ After=network.target
 ExecStart=python3.11 /opt/odigos-demo-inventory/app/main.py
 KillMode=mixed
 Restart=on-failure
+RestartSec=1s
+RestartSteps=1s
+RestartMaxDelaySec=1min
 Type=simple
 User=odigos
 Group=odigos
