--- a/pricing/distribution/systemd.service
+++ b/pricing/distribution/systemd.service
@@ -7,6 +7,9 @@ After=network.target
 ExecStart=dotnet /opt/odigos-demo-pricing/app/pricing.dll
 KillMode=mixed
 Restart=on-failure
+RestartSec=1s
+RestartSteps=1s
+RestartMaxDelaySec=1min
 Type=simple
 User=odigos
 Group=odigos
