--- a/frontend/deployment/deployment.yaml
+++ b/frontend/deployment/deployment.yaml
@@ -25,3 +25,16 @@ spec:
           value: coupon:8080
         ports:
         - containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /actuator/health/readiness
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /actuator/health/liveness
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+
