--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -52,7 +52,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: keyval/odigos-demo-frontend:v0.1
+        image: keyval/odigos-demo-frontend:v0.2
         imagePullPolicy: Always
         securityContext:
           runAsUser: 1000
@@ -65,6 +65,18 @@ spec:
           value: coupon:8080
         ports:
         - containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /actuator/health/readiness
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        livenessProbe:
+          httpGet:
+            path: /actuator/health/liveness
+            port: 8080
+          initialDelaySeconds: 5
+          periodSeconds: 5
 ---
 kind: Service
 apiVersion: v1
