--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,12 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+  
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+  
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
