fix: reference correct env vars

--- a/coupon/deployment/deployment.yaml
+++ b/coupon/deployment/deployment.yaml
@@ -17,7 +17,7 @@ spec:
       - name: coupon
         image: dev/coupon:dev
         env:
-          - name: MEMBERSHIP_SERVICE_URL
+          - name: MEMBERSHIP_SERVICE_HOST
             value: "membership:8080"
         ports:
         - containerPort: 8080
