--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -15,10 +15,10 @@ spec:
     spec:
       containers:
       - name: coupon
-        image: keyval/odigos-demo-coupon:v0.1.9
+        image: keyval/odigos-demo-coupon:v0.1.11
         imagePullPolicy: Always
         env:
-          - name: MEMBERSHIP_SERVICE_URL
+          - name: MEMBERSHIP_SERVICE_HOST
             value: "membership:8080"
         ports:
         - containerPort: 8080
@@ -52,7 +52,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: keyval/odigos-demo-frontend:v0.1.9
+        image: keyval/odigos-demo-frontend:v0.1.11
         imagePullPolicy: Always
         securityContext:
           runAsUser: 1000
@@ -95,7 +95,7 @@ spec:
     spec:
       containers:
       - name: inventory
-        image: keyval/odigos-demo-inventory:v0.1.9
+        image: keyval/odigos-demo-inventory:v0.1.11
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -129,7 +129,7 @@ spec:
     spec:
       containers:
       - name: membership
-        image: keyval/odigos-demo-membership:v0.1.9
+        image: keyval/odigos-demo-membership:v0.1.11
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -163,7 +163,7 @@ spec:
     spec:
       containers:
       - name: pricing
-        image: keyval/odigos-demo-pricing:v0.1.9
+        image: keyval/odigos-demo-pricing:v0.1.11
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
