tmp: enable builds on PRs [REVERT]

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,9 @@
 name: Release Demo Services
 
 on:
+  pull_request:
+    branches:
+      - main
   push:
     tags:
       - "v*"
@@ -63,7 +66,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ env.TAG }}
+          # ref: ${{ env.TAG }}
 
       - name: Set env
         id: vars
@@ -113,7 +116,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ env.TAG }}
+          # ref: ${{ env.TAG }}
 
       - name: Install GemFury CLI
         run: |
@@ -143,8 +146,8 @@ jobs:
           sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
           nfpm pkg --packager rpm --target dist/
           nfpm pkg --packager deb --target dist/
-          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
-          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
+          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
+          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
   ######################
   ####   INVENTORY  ####
   ######################
@@ -165,7 +168,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ env.TAG }}
+          # ref: ${{ env.TAG }}
 
       - name: Install GemFury CLI
         run: |
@@ -198,8 +201,8 @@ jobs:
           sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
           nfpm pkg --packager rpm --target dist/
           nfpm pkg --packager deb --target dist/
-          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
-          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
+          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
+          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
   ######################
   ####    COUPON    ####
   ######################
@@ -220,7 +223,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ env.TAG }}
+          # ref: ${{ env.TAG }}
 
       - name: Install GemFury CLI
         run: |
@@ -252,8 +255,8 @@ jobs:
           sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
           nfpm pkg --packager rpm --target dist/
           nfpm pkg --packager deb --target dist/
-          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
-          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
+          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
+          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
   ######################
   ####    PRICING   ####
   ######################
@@ -277,7 +280,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ env.TAG }}
+          # ref: ${{ env.TAG }}
 
       - name: Install GemFury CLI
         run: |
@@ -309,5 +312,5 @@ jobs:
           sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
           nfpm pkg --packager rpm --target dist/
           nfpm pkg --packager deb --target dist/
-          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
-          fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
+          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.rpm
+          # fury push --public --account $FURY_ACCOUNT --api-token $FURY_API_TOKEN dist/*.deb
