--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
@@ -61,7 +61,7 @@ jobs:
     steps:
 
       - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
@@ -111,7 +111,7 @@ jobs:
     steps:
 
       - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
@@ -169,7 +169,7 @@ jobs:
     steps:
 
       - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
@@ -230,7 +230,7 @@ jobs:
     steps:
 
       - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
@@ -293,7 +293,7 @@ jobs:
     steps:
 
       - name: Store new version in env
-        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "TAG=${GITHUB_REF##refs/*/}" >> $GITHUB_ENV
 
       - uses: actions/checkout@v4
         with:
