fix: load built images to docker

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -145,7 +145,7 @@ jobs:
           FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          docker buildx build --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
+          docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
           docker create --name tc ${{ matrix.service }}
           docker cp $(docker create --name tc frontend):/app ./dist && docker rm tc
           sed -i -E 's/version: .*$/version: '"${TAG}"'/' nfpm.yaml
@@ -203,7 +203,7 @@ jobs:
           FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          docker buildx build --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
+          docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
           docker create --name tc ${{ matrix.service }}
           mkdir -p ./dist/app
           docker cp tc:/app ./dist/app
@@ -264,7 +264,7 @@ jobs:
           FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          docker buildx build --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
+          docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
           docker create --name tc ${{ matrix.service }}
           mkdir -p ./dist/app
           docker cp tc:/app ./dist/app
@@ -327,7 +327,7 @@ jobs:
           FURY_API_TOKEN: ${{ secrets.FURY_API_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          docker buildx build --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
+          docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
           docker create --name tc ${{ matrix.service }}
           mkdir -p ./dist/app
           docker cp tc:/app ./dist/app
