feat: unify build steps and package architecture for all packages

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -147,7 +147,9 @@ jobs:
         run: |
           docker buildx build --load --platform=linux/${{ matrix.arch }} -t ${{ matrix.service }} .
           docker create --name tc ${{ matrix.service }}
-          docker cp $(docker create --name tc frontend):/app ./dist && docker rm tc
+          mkdir -p ./dist/app
+          docker cp tc:/app ./dist
+          docker rm tc
           sed -i -E 's/version: .*$/version: '"${TAG}"'/' nfpm.yaml
           sed -i -E 's/arch: .*$/arch: '"${{ matrix.pkg_arch }}"'/' nfpm.yaml
           nfpm pkg --packager rpm --target dist/
